docusaurus: Convert 02.administer/20.backups

--- a/docs/02.administer/20.backups/05.evaluate.md
+++ b/docs/02.administer/20.backups/05.evaluate.md
@@ -1,13 +1,5 @@
 ---
 title: Backup strategies
-template: docs
-taxonomy:
-    category: docs
-routes:
-  default: '/backup_strategies'
-page-toc:
-  active: true
-  depth: 3
 ---
 
 In the context of self-hosting, backups are an important element to compensate for unexpected events (fire, database corruption, loss of access to the server, compromised server...). The backup policy to implement depends on the importance of the services and data you manage. For example, backing up a test server will be of little interest, while you will want to be very careful if you are managing critical data for an association or a company - and in such cases, you will want to store the backups *in a different location or locations*.
@@ -22,13 +14,15 @@ A good backup is checked regularly to ensure the effectiveness and integrity of 
 
 Finally, a good backup is one that is **restorable within an acceptable timeframe** for you. Remember to document your restoration method and to estimate the transfer time of a copy, especially if the Internet connections involved are not symmetrical.
 
-!!! Example of **a robust and comfortable combination**:
+:::info
+Example of **a robust and comfortable combination**:
 
 - a remote and automatic backup with borg
 - a backup on external disk and automatic with borg
 - a regular snapshot/image (and before updates)
 - a monitored RAID 1 array (or a commercial VPS that will also be on an array)
 - a decryption passphrase stored on 3 media in 2 locations
+:::
 
 ## Some possible methods
 
@@ -42,7 +36,9 @@ Finally, a good backup is one that is **restorable within an acceptable timefram
 
 Below, a list of risks sorted from the most to the least probable, whose probability remains to be adapted according to your situation (location of the server, quality of the installations, user profiles, etc.). It is up to you to put the cursor where it should be, especially considering the consequences of a data loss.
 
-!!! Keep in mind that real accidents are linked to the occurrence of 2 events simultaneously.
+:::caution
+Keep in mind that real accidents are linked to the occurrence of 2 events simultaneously.
+:::
 
 - **Lack of rigor**: strategies based on manual backups require a lot of rigor in the regularity
 - **Bad handling**: it can happen that a backup is erased by mistake during a restoration or if you rely on a synchronization system, you could delete a file and the deletion would be synchronized instantly
