--- a/docs/02.administer/20.backups/20.avoid_hardware_failure.md
+++ b/docs/02.administer/20.backups/20.avoid_hardware_failure.md
@@ -1,15 +1,6 @@
 ---
-title: Prevent hardware failures
-template: docs
-taxonomy:
-    category: docs
-routes:
-  default: '/backup/prevent_hardware_failure'
-page-toc:
-  active: true
-  depth: 3
+title: Avoid hardware failure
 ---
-
 
 ## Physically secure your server
 
@@ -53,10 +44,12 @@ However, these disk clustering techniques should not be considered as backups. A
 Some examples of situations known to professional system administrators:
 
 - the disks of a cluster mounted with disks of the same brand can fail almost at the same time within a few hours
-- without monitoring the health of the disks, there is a good chance that the failure of one disk in the cluster will only be noticed when a second one fails (><)
+- without monitoring the health of the disks, there is a good chance that the failure of one disk in the cluster will only be noticed when a second one fails (\>\<)
 - if you don't have a spare disk, the delay in purchasing one may result in the other disk crashing
 - a half-functional disk that produces errors can propagate its error through the cluster
 - the disk connectors or the RAID controller can also produce errors or fail
 - the more complex you make the architecture with many components, the more likely it is that one of them will fail
 
-!!! If you want to set up a RAID array or use btrfs, the easiest way is to do it at installation with the YunoHost iso in expert mode (when partitioning the system).
+:::info
+If you want to set up a RAID array or use btrfs, the easiest way is to do it at installation with the YunoHost iso in expert mode (when partitioning the system).
+:::
