--- a/docs/02.administer/20.backups/35.migrate_or_merge_servers.md
+++ b/docs/02.administer/20.backups/35.migrate_or_merge_servers.md
@@ -19,4 +19,6 @@ If YunoHost's archive system is not convenient enough to migrate a server, you c
 
 If you merge 2 servers together, you will need to recreate the users, domains and permissions of the first server on the destination server. Then you can restore app by app.
 
-!! There is a limitation concerning apps that have the same ID. It will not be possible to restore them easily. Also be careful not to delete the eponymous app from the destination server :/
+:::danger
+There is a limitation concerning apps that have the same ID. It will not be possible to restore them easily. Also be careful not to delete the eponymous app from the destination server :/
+:::
