docusaurus: Convert 02.administer/45.tutorials

--- a/docs/02.administer/45.tutorials/05.domains/dns_local_network.mdx
+++ b/docs/02.administer/45.tutorials/05.domains/dns_local_network.mdx
@@ -1,10 +1,5 @@
 ---
 title: Local network access to your server
-template: docs
-taxonomy:
-  category: docs
-routes:
-  default: '/dns_local_network'
 ---
 
 After completing your server installation, it is possible that your domain will not be accessible through the local network. This is an issue known as [hairpinning](http://en.wikipedia.org/wiki/Hairpinning) - a feature that is not well supported by some internet routers.
@@ -30,12 +25,13 @@ The goal here is to create a network wide redirection handled by your router. Th
 
 If you haven't found your server private IP, you may find it using the SFR box admin panel:  
     Go to Network tab > General
-<img src="/user/images/ip_serveur.png" width=800>
+
+<img src="/img/ip_serveur.png" width="800"/>
 
 #### Configure SFR box's DNS
 
 Go to Network tab > DNS and add your domain name to the box's DNS.
-<img src="/user/images/dns_9box.png" width=800>
+<img src="/img/dns_9box.png" width="800"/>
 
 ## Configure [hosts](https://en.wikipedia.org/wiki/Host_%28Unix%29) file on client workstation
 
