--- a/docs/02.administer/45.tutorials/10.theming.md
+++ b/docs/02.administer/45.tutorials/10.theming.md
@@ -1,10 +1,5 @@
 ---
 title: Customize the appearance of the user portal
-template: docs
-taxonomy:
-    category: docs
-routes:
-  default: '/theming'
 ---
 
 ## Globally disable the overlay
@@ -60,7 +55,7 @@ Then, edit the files the CSS and JS files in `/usr/share/ssowat/portal/assets/th
 
 You can also add your own images and assets which can then be used by the CSS and JS files.
 
-!!! Share your custom theme with the community! <https://github.com/yunohost-themes>
+!!! [Share your custom theme with the community!](https://github.com/yunohost-themes)
 
 ### Example : customizing the logo
 
