--- a/docs/02.administer/45.tutorials/15.filezilla.md
+++ b/docs/02.administer/45.tutorials/15.filezilla.md
@@ -70,9 +70,9 @@ From any recent GNU/Linux, you should be able to use the `file manager` to reach
 
 Nautilus from Gnome3 and Dolphin from KDE have features similar to FileZilla, out of the box.
 
-- <https://help.gnome.org/users/gnome-help/stable/nautilus-connect.html.en>
-- <https://docs.kde.org/stable5/en/dolphin/dolphin/location-bar.html#location-bar-editable-kioslaves>
-- <https://www.techrepublic.com/article/how-to-use-linux-file-manager-to-connect-to-an-sftp-server/>
+- [Nautilus Connect](https://help.gnome.org/users/gnome-help/stable/nautilus-connect.html.en)
+- [Dolphin](https://docs.kde.org/stable5/en/dolphin/dolphin/location-bar.html#location-bar-editable-kioslaves)
+- [Tutorial for Nautilus and SFTP](https://www.techrepublic.com/article/how-to-use-linux-file-manager-to-connect-to-an-sftp-server/)
 
 ### Windows
 
