--- a/docs/02.administer/45.tutorials/40.torhiddenservice.md
+++ b/docs/02.administer/45.tutorials/40.torhiddenservice.md
@@ -7,7 +7,10 @@ routes:
   default: '/torhiddenservice'
 ---
 
-! This tuto is not finished ! Some data could leak with this setup like the main domain of your YunoHost, so it's not a "Hidden Service". See <https://www.torproject.org/docs/tor-hidden-service.html.en>
+:::warning
+This tuto is not finished ! Some data could leak with this setup like the main domain of your YunoHost, so it's not a "Hidden Service".
+See [The official Tor hidden service documentation](https://www.torproject.org/docs/tor-hidden-service.html.en).
+:::
 
 ###  Installing Tor
 
