--- a/docs/02.administer/50.troubleshooting/03.cleanup.md
+++ b/docs/02.administer/50.troubleshooting/03.cleanup.md
@@ -1,10 +1,5 @@
 ---
 title: Cleanup
-template: docs
-taxonomy:
-    category: docs
-routes:
-  default: '/cleanup'
 ---
 
 These are a few guidelines on how to perform some cleanup on the server, for instance when storage space becomes a bit short.
@@ -14,4 +9,4 @@ These are a few guidelines on how to perform some cleanup on the server, for ins
 One may use the following command, to perform basic space cleanup (apt, journalctl, logs, ...) :
 `sudo yunohost tools basic-space-cleanup`
 
-Additional steps may be needed, to address current shortcomings : see <https://github.com/YunoHost/issues/issues/2329> for instance.
+Additional steps may be needed, to address current shortcomings : see [a logs cleanup issue](https://github.com/YunoHost/issues/issues/2329) for instance.
