--- a/docs/02.administer/50.troubleshooting/20.ipv6.md
+++ b/docs/02.administer/50.troubleshooting/20.ipv6.md
@@ -1,10 +1,5 @@
 ---
 title: Setting up IPv6
-template: docs
-taxonomy:
-    category: docs
-routes:
-  default: '/ipv6'
 ---
 
 IPv6 may work out of the box in many cases. But in some cases or some specific provider, you may need to tweak things manually to enable IPv6.
@@ -12,11 +7,11 @@ IPv6 may work out of the box in many cases. But in some cases or some specific p
 ## With a VPS from OVH
 
 OVH gives one IPv4 address and one IPv6 address for VPS but by default, only IPv4 is OK.
-The OVH's documentation is here : <https://docs.ovh.com/gb/en/vps/configuring-ipv6/>
+Please check [The OVH documentation](https://docs.ovh.com/gb/en/vps/configuring-ipv6/).
 
 ### Configure the DNS server
 
-Here : <https://yunohost.org/#/dns_subdomains>
+Also check [the documentation for subdomains](/dns_subdomains).
 
 ### Configure the server
 
