docusaurus: Convert 03.user_guide

--- a/docs/03.user_guide/index.mdx
+++ b/docs/03.user_guide/index.mdx
@@ -1,10 +1,13 @@
 ---
 title: User guide
-template: chapter
+menu: User guide
+template: docs
 taxonomy:
     category: docs
 routes:
   default: '/user_guide'
 ---
 
-# User guide
+:::caution
+This section is being worked on.
+:::
