Update overview pages

--- a/docs/01.overview/15.try_yunohost.mdx
+++ b/docs/01.overview/15.try_yunohost.mdx
@@ -18,10 +18,9 @@ This demo server could be down from time to time, but at least you can test and 
 
 <div style={{display: "flex"}} >
 <YunoHostDocsCard>
-  <YunoHostDocsCardHeading url="https://demo.yunohost.org/?target=_blank&classes=btn,btn-lg,btn-success" color="#30ae40">
-
-  <FAIcon icon='fa-user'/> User interface
-  </YunoHostDocsCardHeading>
+  <YunoHostDocsCardHeading url="https://demo.yunohost.org/?target=_blank&classes=btn,btn-lg,btn-success" color="#30ae40"> {
+  } <FAIcon icon='fa-user'/> User interface {
+  } </YunoHostDocsCardHeading>
 
   username: `demo`
 
@@ -29,11 +28,9 @@ This demo server could be down from time to time, but at least you can test and 
 </YunoHostDocsCard>
 
 <YunoHostDocsCard>
-  <YunoHostDocsCardHeading url="https://demo.yunohost.org/yunohost/admin/?target=_blank&classes=btn,btn-lg,btn-primary" color="#1267da">
-
-  <FAIcon icon='fa-cog'/> Administration interface
-
-  </YunoHostDocsCardHeading>
+  <YunoHostDocsCardHeading url="https://demo.yunohost.org/yunohost/admin/?target=_blank&classes=btn,btn-lg,btn-primary" color="#1267da"> {
+  } <FAIcon icon='fa-cog'/> Administration interface {
+  } </YunoHostDocsCardHeading>
 
   username: `demo`
 
