docusaurus: Convert 05.community

--- a/docs/05.community/40.press_kit.mdx
+++ b/docs/05.community/40.press_kit.mdx
@@ -1,18 +1,12 @@
 ---
 title: Communication
-template: docs
-taxonomy:
-  category: docs
-routes:
-  default: '/press_kit'
-  aliases: 
-    - '/communication'
 ---
-
+{/* 
 ! TODO: Add logo and kakemono file  
 ! TODO: Add kakemono photo <https://matrix-client.matrix.org/_matrix/media/r0/download/pijean.ovh/TqtyOjqllOeSXYziawxeGzIP>  
 ! TODO: Add "About YunoHost" section  
-! TODO: Add email contact
+! TODO: Add email contact 
+*/}
 
 ## Talks / conf
 
@@ -67,7 +61,7 @@ routes:
 
 ## YunoHost was cited in
 
-- [EXPERIMENTA 2018](https://livestream.com/accounts/26482307/events/8034656/player?width=960&height=540&enableInfoAndActivity=true&defaultDrawer=&autoPlay=true&mute=false) at 57.47 (depuis <https://www.experimenta.fr/direct/>)
+- [EXPERIMENTA 2018](https://livestream.com/accounts/26482307/events/8034656/player?width=960&height=540&enableInfoAndActivity=true&defaultDrawer=&autoPlay=true&mute=false) at 57.47 (depuis [le site d'Experimenta](https://www.experimenta.fr/direct/))
 - [Capitole du libre 2017 - « Contributopia », Dégoogliser ne suffit pas](https://www.youtube.com/watch?v=ip6_VMkWpr8&feature=youtu.be&t=4793)
 - [Contributopia - Essaimage (Framasoft)](https://contributopia.org/fr/essaimage/)
 - (FR) [Triple A: Émission Underscore #144 du 19 mai 2019](https://www.triplea.fr/blog/podcast/emission-underscore-144-du-19-mai-2019/)
