--- a/docs/05.community/45.chatons.mdx
+++ b/docs/05.community/45.chatons.mdx
@@ -3,3 +3,5 @@ title: Creating a CHATONS with YunoHost
 template: docs
 redirect: 'https://wiki.chatons.org/doku.php/heberger/administration_systeme/yunohost'
 ---
+
+{/* TODO: */}
