--- a/docs/05.community/90.terms_of_services.mdx
+++ b/docs/05.community/90.terms_of_services.mdx
@@ -1,12 +1,5 @@
 ---
 title: General and Specific Conditions of Services operated by the YunoHost project
-template: docs
-taxonomy:
-  category: docs
-routes:
-  default: '/terms_of_services'
-  aliases: 
-    - '/tos'
 ---
 
 01/02/2024
@@ -40,7 +33,7 @@ YunoHost as software is released [under the AGPLv3 license](https://www.gnu.org/
 
 The YunoHost project reserves the right to update and modify these conditions. In this case, the YunoHost project will inform those concerned by posting a notice on the forum or, failing that, on the site.
 
-A dated version history of these conditions can be found at <https://github.com/YunoHost/project-organization/commits/master/yunohost_project_tos.md>
+A dated version history of these conditions can be [found here](https://github.com/YunoHost/project-organization/commits/master/yunohost_project_tos.md).
 
 ## Services overview
 
@@ -154,7 +147,7 @@ If you abuse the service, for example by monopolizing shared machine resources, 
 
 Given its international scope, the YunoHost project is not currently a candidate for membership of this collective. However, members of the C.H.A.T.O.N.S collective are currently using YunoHost.
 
-For more information on the C.H.A.T.O.N.S. charter: <https://chatons.org/charte>
+For more information see [the C.H.A.T.O.N.S. charter](https://chatons.org/charte).
 
 ### Respect for your personal data and privacy
 
@@ -387,7 +380,7 @@ As with any web service, a technical log exists recording the IP and User Agent 
 
 #### Service address
 
-`forum.yunohost.org` and chats listed on <https://yunohost.org/chat_rooms>
+`forum.yunohost.org` and chats listed on [the documentation](/chat_rooms).
 
 #### Asking for help
 
