--- a/docs/05.community/35.security_team.md
+++ b/docs/05.community/35.security_team.md
@@ -1,10 +1,5 @@
 ---
 title: Security team
-template: docs
-taxonomy:
-    category: docs
-routes:
-  default: '/security_team'
 ---
 
 Contact the security team by mail: `security@yunohost.org`.
@@ -19,4 +14,4 @@ uid                  YunoHost Security <security@yunohost.org>
 sub   4096R/446838AF 2016-07-01
 ```
 
-See <https://gist.github.com/opi/4496024dc3ff29ab2e068fd57092ab7c> or <https://twitter.com/yunohost/status/748975105393459200> for other trustable fingerprints
+See [a gist on Github](https://gist.github.com/opi/4496024dc3ff29ab2e068fd57092ab7c) or [a tweet from YunoHost](https://twitter.com/yunohost/status/748975105393459200) for other trustable fingerprint sources.
