docusaurus: Convert 06.contribute/05.write_documentation

--- a/docs/06.contribute/05.write_documentation/01.apps_documentation.mdx
+++ b/docs/06.contribute/05.write_documentation/01.apps_documentation.mdx
@@ -1,15 +1,13 @@
 ---
+sidebar_label: Applications documentation
 title: Guide to writing application documentation
-template: docs
-taxonomy:
-    category: docs
-routes:
-  default: '/doc_writing_guide'
 ---
+
+{/* TODO: revamp this, none of this is relevant anymore */}
 
 ## Users / Administrators documentation pages
 
-Add a one-click install button (such as <https://yunohost.org/app_piwigo>) and a button on the application integration level.
+Add a one-click install button (such as [https://yunohost.org/app_piwigo](https://yunohost.org/app_piwigo)) and a button on the application integration level.
 
 Classification of available applications by tags (genre, Git, association management, e-mails, etc.).
 
